--- a/client/views/book_details.html
+++ b/client/views/book_details.html
@@ -13,6 +13,7 @@
         <ul class="list-group">
           <li class="list-group-item">Genre: {{book.genre}}</li>
           <li class="list-group-item">Publisher: {{book.publisher}}</li>
+          <li class="list-group-item">Time: {{book.create_date}}</li>
         </ul>
       </div>
     </div>
