--- a/client/views/add_book.html
+++ b/client/views/add_book.html
@@ -18,6 +18,7 @@
             <option value="Entertainment">Entertainment</option>
             <option value="Politics">Politics</option>
             <option value="Social News">Social News</option>
+            <option value="Pundits View">Videos</option>
             <option value="Pundits View">Pundits View</option>
             <option value="Other">Other</option>
           </select>
