--- a/client/views/books.html
+++ b/client/views/books.html
@@ -60,7 +60,8 @@
     	<div ng-repeat="book in books">
     		<div class="col-md-6">
     			<div class="col-md-6">
-    				<h4>{{book.title}}</h4>
+                    <h4>{{book.title}}</h4>
+                    <h6>{{book.genre}}</h6>
     				<p>{{book.create_date}}</p>
     				<a class="btn btn-primary" href="#/books/details/{{book._id}}">View Details</a>
     			</div>
